<resources>
    <string name="app_name">EMMSUAT</string>
    <string name="app_name_debug">EMMSUAT</string>
    <string name="login_id_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
   <string name="pleaseInput">请输入</string>
    <string name="warning_title">溫馨提示</string>
    <string name="network_error">请检测网络是否正常</string>
    <string name="warning_message_confirm">确定</string>
    <string name="warning_message_no_user">请输入员工号</string>
    <string name="warning_message_no_password">请输入用戶密码</string>
    <string name="exit">退出</string>
    <string name="warning_message_error">登录失败，员工号或密码错误</string>
    <string name="warning_message_frozen">帐号已冻结</string>
    <string name="task_history_query">任务历史查询</string>
    <string name="repair">车间报修</string>
    <string name="move_car">搬车</string>
    <string name="other">其它</string>
    <string name="transfer_model">调车</string>
    <string name="task_transfer_model">衣车调动</string>
    <string name="login">登录</string>
    <string name="systemSetting">系统设置</string>
    <string name="logining">登录中. . .</string>
    <string name="public_machine">公共机</string>
    <string name="login_error">员工号不存在或密码错误</string>
    <string name="create_task">创建任务</string>
    <string name="repair_tag">车间报修</string>
    <string name="maintenance">维护</string>
    <string name="team_status">班组人员状态</string>
    <string name="team">班组人员</string>
    <string name="select">请点击</string>
    <string name="pleaseInputOrSelect">请点击或下拉</string>
    <string name="scan">请扫描</string>
    <string name="task_type">任务类型: </string>
    <string name="task_t">任务类型：</string>
    <string name="creater">创建人员:</string>
    <string name="applicanter">创建人员：</string>
    <string name="mainPerson">主负责人：</string>
    <string name="equipment_num"> 机台编号: </string>
    <string name="task_equipment_num"> 机台编号： </string>
    <string name="e_num"> 机台编号： </string>
    <string name="group">所属组别：</string>
    <string name="belongGroup">所属组别:</string>
    <string name="equipment_name"> 设备名称: </string>
    <string name="hasEquipment">有无设备:</string>
    <string name="IsHasEquipment">任务属性</string>
    <string name="haveEquipment">设备相关</string>
    <string name="NothaveEquipment">设备无关</string>
    <string name="task_subtype_name"> 任务子类型: </string>
    <string name="task_description"> 任务描述:</string>
    <string name="task_create_description">任务描述:&#160;</string>
    <string name="task_status">任务状态:</string>
    <string name="task_s">任务状态</string>
    <string name="time">创建时间:</string>
    <string name="title_time">时间</string>
    <string name="task_description_hint"> &#160;任务描述</string>
    <string name="hint_search_box">搜索</string>
    <string name="nothing_found">没有搜索结果</string>
    <string name="title_search_task_type">任务类型</string>
    <string name="title_search_task_subtype">任务子类型</string>
    <string name="title_search_group">组&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="title_search_equipment_name">设备名称</string>
    <string name="title_search_equipment_nun">机台号</string>
    <string name="dialog_tips">您的任务已创建成功!</string>
    <string name="waiting">正在提交，请稍后. . .</string>
    <string name="tips_nfc">请在手机背面刷卡</string>
    <string name="error">提示</string>
    <string name="no_nfc">在这个装置没有发现NFC功能</string>
    <string name="nfc_disabled">NFC没有启用。请转到无线设置来启用.</string>
    <string name="repair_task">车间报修任务</string>
    <string name="maintain_task">维护任务</string>
    <string name="move_car_task">搬车任务</string>
    <string name="other_task">其它任务</string>
    <string name="transfer_model_task">调车任务</string>
    <string name="working">进行中</string>
    <string name="paused">已暂停</string>
    <string name="group_type">所属组别：</string>
    <string name="grouptype">所属组别：</string>
    <string name="device_num">设备编号：</string>
    <string name="device_name">设备名称：</string>
    <string name="task_state">任务状态： </string>
    <string name="repair_time">创建时间：</string>
    <string name="start_time">开始时间： </string>
    <string name="end_time">结束时间：</string>
    <string name="task_descripbe">任务描述：</string>
    <string name="standardWorkTime">标准工时：</string>
    <string name="verifyWorkTime">核验工时：</string>
    <string name="verifyWorkTimeRemark">核验备注：</string>
    <string name="changeWorkTimeRemark">修改工时备注：</string>
    <string name="pending_orders">待接单</string>
    <string name="orders">接单</string>
    <string name="task_state_order">任务状态：</string>
    <string name="device_name_order">设备名称：</string>
    <string name="create_time">创建时间：</string>
    <string name="linked_order">已结单</string>
    <string name="task_number">任务单号：</string>
    <string name="issue_time">发出时间：</string>
    <string name="receive_time">接单时间：</string>
    <string name="Approver">审批人员：</string>
    <string name="ApproverTime">审批时间：</string>
    <string name="ApproverReason">原因说明：</string>
    <string name="device_count">设备总数：</string>
    <string name="dealed_count">已处理：</string>
    <string name="participant">参与人员：</string>
    <string name="task_details">任务详情</string>
    <string name="task_state_details_non">未执行</string>
    <string name="task_state_details_finish">已完成</string>
    <string name="no_creater">暂无</string>
    <string name="task_picture">任务图片：</string>
    <string name="take_photo">拍照</string>
    <string name="select_from_album">从相册中选取</string>
    <string name="cancel">取消</string>
    <string name="album">相册</string>
    <string name="max_picture">最多选择9张图片</string>
    <string name="finish">完成</string>
    <string name="task_reason">任务原因</string>
    <string name="task_reason_add">任务原因：</string>
    <string name="task_note">任务备注：</string>
    <string name="hint_task_note">请输入任务备注</string>
    <string name="tips_tasktype_post">任务类型不能为空</string>
    <string name="tips_subtype_post">任务子类型不能为空</string>
    <string name="tips_scan_operator_post">创建人不能为空</string>
    <string name="tips_team_type_post">组别不能为空</string>
    <string name="tips_device_name_post">设备名称不能为空</string>
    <string name="tips_device_num_post">机台号不能为空</string>
    <string name="tips_task_desc_post">任务描述不能为空</string>
    <string name="work_num">工作编号:</string>
    <string name="work_num_dialog">工作编号</string>
    <string name="work_name">工作名称:</string>
    <string name="work_status">状态:</string>
    <string name="auditing_status">审核状态:</string>
    <string name="work_description">工作描述:</string>
    <string name="approved_working_hours">核定工时:</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="sub_task">子任务</string>
    <string name="sub_task_equipment_num">机台编号:</string>
    <string name="sure">确定</string>
    <string name="warranty_person">创建人员：</string>
    <string name="task_main_person">主负责人：</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="error_add_equipment">该任务为无设备任务，不可添加设备</string>
    <string name="can_not_add_equipment">不可添加设备</string>
    <string name="setting_su">设置成功</string>
    <string name="invitor_help">邀请协助</string>
    <string name="workname">姓名：</string>
    <string name="tech">技能：</string>
    <string name="task_descr">任务描述：</string>
    <string name="err_add_task_equipment">增加任务设备失败</string>
    <string name="UserName">人员姓名：</string>
    <string name="username">人员姓名:</string>
    <string name="workerName">姓名：</string>
    <string name="WorkNum">工号:</string>
 <string name="workNumber">工号：</string>
    <string name="DownloadDataBase">数据文件下载中，请稍候</string>
    <string name="task_create_time">创建时间:</string>
    <string name="task_accept_time">接单时间:</string>
    <string name="task_complete_time">完成时间:</string>
    <string name="task_id">任务单号:</string>
    <string name="taskid">任务单号：</string>
    <string name="response_speed">响应速度：</string>
    <string name="service_attitude">服务态度：</string>
    <string name="repair_speed">维修速度：</string>
    <string name="command_standard">评分标准：1–5星，5星最高</string>
    <string name="waitingDeal">待处理</string>
    <string name="start">处理中</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="wait_material">待料</string>
    <string name="material_requisition">领料</string>
    <string name="quit">退出</string>
    <string name="complete">完成</string>
    <string name="checkHistoryRecord">查看历史记录</string>
    <string name="please_select">请选择</string>
    <string name="fault_summary">故障总结</string>
    <string name="task_summary">任务总结</string>
    <string name="task_summary_tag">任务总结：</string>
    <string name="task_other_summary_tag">任务总结:</string>
    <string name="fault_type">故障类型:</string>
    <string name="fault_t">故障类型：</string>
    <string name="summary_person">总结人员:</string>
    <string name="fault_description">故障描述:</string>
    <string name="fault_d">故障描述：</string>
    <string name="repair_status">维修情况:</string>
    <string name="repair_s">维修情况：</string>
    <string name="faultType">故障类型</string>
    <string name="total_worktime">工时总和：</string>
    <string name="total_workload">核定工时：</string>
    <string name="workload">工作量：</string>
    <string name="workL">工作总量:</string>
    <string name="entering_workload">工作量录入</string>
    <string name="workload_title">工作量</string>
    <string name="workloadPercent">工作量：</string>
    <string name="change_equipment_operator_status">修改操作员状态</string>
    <string name="change_equipment_status">修改设备状态</string>
    <string name="hours">小时</string>
    <string name="pleaseSelectTaskClass">请选择任务类型</string>
    <string name="pleaseSelectGroupFirst">请选择组别</string>
    <string name="pleaseSelectGroup">请先选择组别或无该组别设备信息</string>
    <string name="pleaseSelectEquipmentName">请选择设备名称</string>
    <string name="pleaseSelectEquipmentNameOrNoData">请选择设备名称或该设备名称无对应任务描述</string>
    <string name="pleaseSelectEquipment">请先选择设备名称，或刷设备卡获取机台号</string>
    <string name="pleaseSelectTaskDescription">请选择任务描述</string>
    <string name="pleaseScanICcard">请先扫描工卡获取创建人信息</string>
    <string name="pleaseInputCancleTaskReason">请输入取消原因</string>
    <string name="pleaseInputMeasureData">请输入测量值</string>
    <string name="pleaseInputMeasureDataStandard">请输入标准值</string>
    <string name="pleaseRelogin">请重新登录</string>
    <string name="pleaseSelectRole">选择角色</string>
    <string name="pleaseSelectSubmitData">请选择需要提交的内容</string>
    <string name="getCommandFail">获取任务评价失败，请检查网络</string>
    <string name="preStep">上一步</string>
    <string name="nextStep">下一步</string>
    <string name="task_command">任务评价</string>
    <string name="equipment_tag_number">设备标识号:</string>
    <string name="iccard_id">IC卡号:</string>
    <string name="entering_equipment">录入设备</string>
    <string name="loadingData">数据加载中，请稍候</string>
    <string name="submitData">数据提交中，请稍候</string>
    <string name="exchangeOrderToOnePerson">只能转单给一人</string>
    <string name="exchangeOrder">转单</string>
    <string name="exchangeOrderSuccess">转单成功</string>
    <string name="exchangeOrderFail">转单失败</string>
    <string name="inviteSuccess">邀请成功</string>
    <string name="inviteFail">邀请失败</string>
    <string name="taskHistory">任务历史</string>
    <string name="scanICCardSuccess">刷卡成功</string>
    <string name="scanICCardFail">刷卡失败</string>
    <string name="percent">(单位：%)</string>
    <string name="noMoreData">没有更多数据了</string>
    <string name="noData">无数据</string>
    <string name="noCommandData">无待评价任务</string>
    <string name="judgeWorkloadSum">工作量总和不等于100%，提交失败</string>
    <string name="submitSuccess">提交成功</string>
    <string name="loadingFail">数据获取失败，请检查网络</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="target_group_tag">目标车间：</string>
</resources>