<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:id="@+id/status"
        android:layout_marginBottom="10dp"
        android:text="@string/loadingFail"/>
    <View
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:id="@+id/line"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/retry"
        android:background="@color/yellow"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/retry"
        android:layout_toLeftOf="@+id/line"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:background="@color/yellow"
        android:textSize="20sp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/back"
        android:layout_toRightOf="@+id/line"/>

</RelativeLayout>