<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="13dp"
        android:background="@drawable/item_click"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingTop="6dp"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creater"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="何邵勃"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:id="@+id/tv_creater_order"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/tv_device_name_order"
            android:layout_alignEnd="@+id/tv_device_name_order" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="4dp"
            android:text="@string/group_type"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_device_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView6"
            android:layout_alignTop="@+id/textView"
            android:layout_marginLeft="3dp"
            android:text="D"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_device_num"
            android:layout_marginTop="3dp"
            android:text="@string/device_name_order"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_device_name_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/textView2"
            android:text="平车"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_device_num_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0115"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView5"
            android:layout_toLeftOf="@+id/textView5"
            android:text="@string/task_state_order"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_orders"
            android:textColor="@color/order_color"
            android:textSize="17sp"
            android:layout_marginRight="16dp"
            android:layout_alignTop="@+id/tv_device_num"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@color/yellow"
            android:padding="3dp"
            android:text="@string/orders"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_num"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/tv_device_num_order"
            android:layout_toStartOf="@+id/tv_device_num_order" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="3dp"
            android:text="@string/create_time"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_create_time_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016.05.05  15:30"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:layout_above="@+id/btn_order"
            android:layout_toRightOf="@+id/textView7"
            android:layout_toEndOf="@+id/textView7" />
    </RelativeLayout>
</RelativeLayout>