<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/item_click"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">
        <TextView
            android:id="@+id/id_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/group_type"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_device_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:paddingLeft="5dp"
            android:layout_toRightOf="@id/id_group"
            android:text="D"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/id_num_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_num"
            android:textColor="@color/text_color"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/tv_device_name_detail"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/tv_device_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="0115"
            android:layout_marginRight="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textSize="17sp"/>
        <TextView
            android:id="@+id/id_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tv_device_name_linked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="平车"
            android:textColor="@color/text_color"
            android:layout_alignTop="@+id/id_device_name"
            android:layout_toRightOf="@+id/id_device_name"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/id_status"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_state"
            android:textColor="@color/text_color"
            android:layout_below="@+id/id_num_device"
            android:layout_alignLeft="@+id/id_num_device"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_task_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linked_order"
            android:textColor="@color/hint_color"
            android:textSize="17sp"
            android:layout_alignTop="@+id/id_status"
            android:layout_toRightOf="@+id/id_status" />

        <TextView
            android:id="@+id/id_start_time_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/repair_time"
            android:textColor="@color/text_color"
            android:layout_below="@+id/id_device_name"
            android:layout_alignParentLeft="true"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_repair_time_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016.05.05 10:22 "
            android:textColor="@color/text_color"
            android:layout_alignTop="@+id/id_start_time_description"
            android:layout_toRightOf="@+id/id_start_time_description"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/id_end_time_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/start_time"
            android:textColor="@color/text_color"
            android:layout_below="@+id/id_start_time_description"
            android:layout_alignParentLeft="true"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_start_time_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016.05.05 10:22 "
            android:textColor="@color/text_color"
            android:layout_alignTop="@+id/id_end_time_description"
            android:layout_toRightOf="@+id/id_end_time_description"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/id_task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/end_time"
            android:textColor="@color/text_color"
            android:layout_below="@+id/id_end_time_description"
            android:layout_alignParentLeft="true"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/tv_end_time_linked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016.05.05 10:22 "
            android:textColor="@color/text_color"
            android:layout_alignTop="@+id/id_task_description"
            android:layout_toRightOf="@+id/id_task_description"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:text="@string/creater"
            android:layout_alignTop="@+id/id_status"
            android:layout_alignParentLeft="true"
            android:id="@+id/textView9" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:text="何邵勃"
            android:layout_marginLeft="2dp"
            android:layout_above="@+id/id_device_name"
            android:layout_toRightOf="@+id/tv_device_num"
            android:id="@+id/tv_creater_linked" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:text="@string/task_descripbe"
            android:layout_below="@+id/id_task_description"
            android:layout_alignParentLeft="true"
            android:id="@+id/textView11" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:textColor="@color/text_color"
            android:textSize="17sp"
            android:text="我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述我是描述"
            android:layout_alignTop="@+id/textView11"
            android:layout_toRightOf="@+id/textView11"
            android:id="@+id/tv_task_describe_linked" />
    </RelativeLayout>
</RelativeLayout>