<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="13dp"
    android:paddingBottom="13dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:layout_alignParentTop="true"
        android:text="@string/applicanter"
        android:layout_alignRight="@+id/textView16"
        android:id="@+id/textView13" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/task_creater"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:layout_alignParentTop="true"
        android:singleLine="true"
        android:layout_toLeftOf="@+id/ccc"
        android:layout_alignTop="@+id/textView13"
        android:layout_toRightOf="@+id/textView13" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_type"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_color"
        android:layout_below="@+id/textView13"
        android:layout_alignRight="@+id/textView16"
        android:textSize="17sp"
        android:id="@+id/textView8" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:layout_toRightOf="@+id/textView8"
        android:layout_alignTop="@+id/textView8"
        android:id="@+id/task_group" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_group_tag"
        android:layout_marginTop="5dp"
        android:textColor="@color/text_color"
        android:layout_below="@+id/textView8"
        android:visibility="gone"
        android:layout_alignRight="@+id/textView16"
        android:textSize="17sp"
        android:id="@+id/target_group_tag" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:visibility="gone"
        android:layout_toRightOf="@+id/target_group_tag"
        android:layout_alignTop="@+id/target_group_tag"
        android:id="@+id/target_group" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:text="@string/task_number"
        android:id="@+id/ccc"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/task_ID" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:id="@+id/task_ID" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:text="@string/issue_time"
        android:layout_below="@+id/target_group_tag"
        android:layout_alignRight="@+id/textView16"
        android:id="@+id/textView14" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:id="@+id/task_create_time"
        android:textSize="17sp"
        android:singleLine="true"
        android:layout_alignTop="@+id/textView14"
        android:layout_toRightOf="@+id/textView14" />
    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_time"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView14"
        android:layout_alignRight="@+id/textView16" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:id="@+id/task_start_time"
        android:textSize="17sp"
        android:singleLine="true"
        android:layout_alignTop="@+id/textView15"
        android:layout_toRightOf="@+id/textView15" />
    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:text="@string/task_descripbe"
        android:layout_below="@+id/textView15" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:id="@+id/task_description"
        android:layout_alignTop="@+id/textView16"
        android:layout_toRightOf="@+id/textView16"/>

</RelativeLayout>